--- a/server/public/index.html
+++ b/server/public/index.html
@@ -45,6 +45,8 @@
     <script type="text/jsx"  src="/app/page/Register.js"></script>
     <script type="text/jsx"  src="/app/page/Login.js"></script>
     <script type="text/jsx"  src="/app/page/Lobby.js"></script>
+    <script type="text/jsx"  src="/app/page/Topup.js"></script>
+
     <script type="text/jsx"  src="/app/page/Play.js"></script>
     <script type="text/jsx"  src="/app/page/Ticket.js"></script>
     <script type="text/jsx"  src="/app/page/GameDial.js"></script>
@@ -57,6 +59,7 @@
     <script type="text/jsx"  src="/app/store/AuthenticationStore.js"></script>
     <script type="text/jsx"  src="/app/store/LobbyStore.js"></script>
     <script type="text/jsx"  src="/app/store/PlayStore.js"></script>
+    <script type="text/jsx"  src="/app/store/TopupStore.js"></script>
 
 
 
