--- a/server/public/index.html
+++ b/server/public/index.html
@@ -48,6 +48,7 @@
     <script type="text/jsx"  src="/app/page/Topup.js"></script>
 
     <script type="text/jsx"  src="/app/page/Play.js"></script>
+    <script type="text/jsx"  src="/app/page/ChatPane.js"></script>
     <script type="text/jsx"  src="/app/page/Ticket.js"></script>
     <script type="text/jsx"  src="/app/page/GameDial.js"></script>
     <script type="text/jsx"  src="/app/page/GameBanner.js"></script>
@@ -60,6 +61,7 @@
     <script type="text/jsx"  src="/app/store/LobbyStore.js"></script>
     <script type="text/jsx"  src="/app/store/PlayStore.js"></script>
     <script type="text/jsx"  src="/app/store/TopupStore.js"></script>
+    <script type="text/jsx"  src="/app/store/ChatStore.js"></script>
 
 
 
