--- a/server/public/index.html
+++ b/server/public/index.html
@@ -46,6 +46,8 @@
     <script type="text/jsx"  src="/app/page/Login.js"></script>
     <script type="text/jsx"  src="/app/page/Lobby.js"></script>
     <script type="text/jsx"  src="/app/page/Topup.js"></script>
+    <script type="text/jsx"  src="/app/page/ValidationErrors.js"></script>
+    <script type="text/jsx"  src="/app/page/ErrorBanner.js"></script>
 
     <script type="text/jsx"  src="/app/page/Play.js"></script>
     <script type="text/jsx"  src="/app/page/ChatPane.js"></script>
@@ -55,6 +57,7 @@
 
     <script type="text/jsx"  src="/app/page/TimeLeft.js"></script>
     <script type="text/jsx"  src="/app/page/Money.js"></script>
+    <script type="text/jsx"  src="/app/page/Error.js"></script>
 
     <script type="text/jsx"  src="/app/store/RegisterStore.js"></script>
     <script type="text/jsx"  src="/app/store/AuthenticationStore.js"></script>
